feat(style): classes and icons feat(components): game and subcomponents of game

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,58 +1,10 @@
-<h1>Ez itt egy gyakorló weboldal</h1>
-<h2>Ez itt egy gyakorló weboldal</h2>
-<h3>Ez itt egy gyakorló weboldal</h3>
-<h4>Ez itt egy gyakorló weboldal</h4>
-<h5>Ez itt egy gyakorló weboldal</h5>
-<h6>Ez itt egy gyakorló weboldal</h6>
-
 <div>
-  <span class="n-0">a</span>
-  <span class="n-10">a</span>
-  <span class="n-20">a</span>
-  <span class="n-30">a</span>
-  <span class="n-40">a</span>
-  <span class="n-50">a</span>
-  <span class="n-60">a</span>
-  <span class="n-70">a</span>
-  <span class="n-80">a</span>
-  <span class="n-90">a</span>
-  <span class="n-100">a</span>
+  <header appHeader>
+    <h1>Let's play</h1>
+  </header>
+
+  <main>
+    <router-outlet></router-outlet>
+    
+  </main>
 </div>
-<div>
-  <span class="p-10">a</span>
-  <span class="p-20">a</span>
-  <span class="p-30">a</span>
-  <span class="p-40">a</span>
-  <span class="p-50">a</span>
-  <span class="p-60">a</span>
-  <span class="p-70">a</span>
-  <span class="p-80">a</span>
-  <span class="p-90">a</span>
-  <span class="p-100">a</span>
-  <span class="p-110">a</span>
-</div>
-
-<div>
-  <span class="a-10">a</span>
-  <span class="a-20">a</span>
-  <span class="a-30">a</span>
-  <span class="a-40">a</span>
-  <span class="a-50">a</span>
-  <span class="a-60">a</span>
-  <span class="a-70">a</span>
-  <span class="a-80">a</span>
-  <span class="a-90">a</span>
-  <span class="a-100">a</span>
-  <span class="a-110">a</span>
-</div>
-
-<button>Valami</button>
-
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, commodi voluptas? Ex neque incidunt temporibus est accusantium vitae quibusdam dolores hic reprehenderit! Consequatur minus placeat aliquid labore aperiam, ipsam libero.</p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi consequatur excepturi, velit labore vitae ab dignissimos, natus incidunt mollitia deserunt accusamus possimus eligendi cum beatae iusto illo exercitationem, atque dolore?
-
-
-<div class="own-animated-border"></div>
-<div class="own-animated-border"></div>
-<router-outlet></router-outlet>
