--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,17 +1,13 @@
-:host {
-  width: 100%;
-}
-
-:host > div {
-  width: 100%;
-  box-sizing: border-box;
-  height: 40px;
+div {
+  height: 100%;
+  gap: 1vh;
   display: grid;
-  grid-template-columns: repeat(11, 1fr);
-  border: 1px solid black;
+  grid-template-rows: max(70px, 8vh) 1fr;
 }
 
-:host div {
-  margin: 10px 0;
+main {
+  width: 100%;
+  height: 100%;
+  padding: 0 1em;
+  box-sizing: border-box;
 }
-
