feat(dialog): add dialog and subdialog components, update and fix styles

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,16 @@
+@if (dialog.activeContent()) {
+
+<app-dialog>
+  <app-dialog-form></app-dialog-form>
+</app-dialog>
+
+}
+
 <div>
   <header appHeader>
     <h1>Let's play</h1>
   </header>
-
   <main>
     <router-outlet></router-outlet>
-    
   </main>
 </div>
