--- a/src/app/components/game/game-field-cell/game-field-cell.scss
+++ b/src/app/components/game/game-field-cell/game-field-cell.scss
@@ -15,7 +15,7 @@
   font-weight: 100;
   user-select: none;
   -webkit-background-clip: inherit;
-  background: linear-gradient(to bottom right, var(--p-40), var(--a-40));
+  background: linear-gradient(to bottom right, var(--gradient-p-component), var(--gradient-a-component));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
