--- a/src/app/shared/styles/_full-frame-animation.scss
+++ b/src/app/shared/styles/_full-frame-animation.scss
@@ -6,8 +6,8 @@
 @mixin create-animation-class($sch) {
   .own-animated-border {
     $scheme: $sch;
-    $first-color: if($scheme == "light", var(--p-60), var(--p-20));
-    $second-color: if($scheme == "light", var(--a-60), var(--a-20));
+    /*     $first-color: if($scheme == "light", var(--p-60), var(--p-20));
+    $second-color: if($scheme == "light", var(--a-60), var(--a-20)); */
     position: relative;
     //background-color: if($scheme == "light", var(--n-10), var(--n-20));
     background-color: var(--theme-background);
