--- a/src/app/components/game/game.scss
+++ b/src/app/components/game/game.scss
@@ -18,14 +18,10 @@
   position: relative;
   justify-self: center;
   grid-template-rows: 20% 60% 20%;
-
-
 }
 
-
-.own-game-unchosen-side-div{
-
-    &::after {
+.own-game-unchosen-side-div {
+  &::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -42,7 +38,6 @@
     left: 50%;
     translate: -50% -50%;
   }
-
 }
 
 #own-game-filed-container {
@@ -56,7 +51,11 @@
 
 span {
   -webkit-background-clip: inherit;
-  background: linear-gradient(to bottom right, var(--p-40), var(--a-40));
+  background: linear-gradient(
+    to bottom right,
+    light-dark(var(--p-70), var(--p-60)),
+    light-dark(var(--a-70), var(--a-70))
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
