--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,10 @@ body {
   border: 2px outset var(--p-30);
   color: var(--p-110);
   border-radius: 1000px;
-  background-image: linear-gradient(var(--p-20), var(--a-10));
+  background-image: linear-gradient(
+    var(--gradient-p-component),
+    var(--gradient-a-component)
+  );
   font-size: 1.6vw;
   user-select: none;
   transition: all ease-in-out 0.4s;
@@ -61,3 +64,102 @@ body {
   }
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  gap: 10px;
+  box-sizing: border-box;
+  padding-top: 10px;
+
+  fieldset {
+    width: 90%;
+    border-radius: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px outset var(--p-100);
+    color: var(--p-100);
+    font-weight: bolder;
+    font-size: max(15px, 1.4vw);
+
+    select {
+      width: 90%;
+      font-size: max(20px, 2vw);
+      border-radius: 1000px;
+      display: flex;
+      box-sizing: border-box;
+      padding: 0 10px;
+      background-color: var(--p-10);
+      border: 2px inset var(--p-100);
+    }
+
+    option {
+      background-color: var(--n-20);
+    }
+
+    input[type="range"] {
+      width: 100%;
+      accent-color: var(--p-10);
+    }
+    input[type="text"],
+    input[type="password"] {
+      width: 90%;
+      font-size: max(15px, 1.4vw);
+      border-radius: 1000px;
+      box-sizing: border-box;
+      padding: 10px 10px;
+      color: var(--p-100);
+      background-color: var(--n-0);
+      transition: all ease-in-out 0.3s;
+      border: 2px outset var(--p-100);
+
+      &::placeholder {
+        color: var(--n-120);
+      }
+
+      &:focus {
+        border: 2px outset var(--p-110);
+        background-color: var(--p-10);
+        outline: none;
+        padding: 10px 20px;
+        font-weight: bolder;
+      }
+    }
+
+    input[type="color"] {
+      width: 100%;
+      height: 30px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      //border: none;
+
+      border-radius: 1000px;
+
+      background: none;
+      cursor: pointer;
+
+      &:focus {
+        outline: none;
+         border: 2px outset var(--p-50);
+      }
+
+      &::-webkit-color-swatch-wrapper {
+        padding: 0;
+        border-radius: inherit;
+      }
+
+      &::-webkit-color-swatch {
+        border: none;
+        border-radius: inherit;
+      }
+    }
+  }
+}
