--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -11,7 +11,7 @@
   <span class="own-header-material-icons material-icons" (click)="openDialogByContent('game_setting')">sports_esports</span>
 <span class="own-header-material-icons material-icons" (click)="openDialogByContent('save' )">save_as</span>
 <span class="own-header-material-icons material-icons" (click)="openDialogByContent('setting')">settings</span>
-<span class="own-header-material-icons material-icons" (click)="openDialogByContent('login')">account_circle</span>
+<span class="own-header-material-icons material-icons" (click)="openDialogByContent(logged() ? 'login' : 'registration')">account_circle</span>
 
   </div>
 </div>
