--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -5,17 +5,28 @@
   <div id="own-header-action-div">
    
     @let isDark= mode ==='dark' ;
-    <span class="own-header-material-icons material-icons" (click)="mode= isDark? 'light' : 'dark' "
+    <span class="own-header-material-icons material-icons" 
+      (click)="mode= isDark? 'light' : 'dark' "
       >{{isDark? 'sunny': 'brightness_2'}}</span
     >
-<span class="own-header-material-icons material-icons" (click)="openDialogByContent('game_setting')">sports_esports</span>
+    <span class="own-header-material-icons material-icons"
+      (click)="openDialogByContent('game_setting')">sports_esports</span>
 
-@if (logged()) {
-<span class="own-header-material-icons material-icons" (click)="openDialogByContent('save' )">save_as</span>
-}
+    @if (logged()) {
+      <span class="own-header-material-icons material-icons"
+        (click)="openDialogByContent('save' )">save_as</span>
+    }
 
-<span class="own-header-material-icons material-icons" (click)="openDialogByContent('setting')">settings</span>
-<span class="own-header-material-icons material-icons" (click)="openDialogByContent(logged() ? 'login' : 'registration')">account_circle</span>
+    <span class="own-header-material-icons material-icons"
+      (click)="openDialogByContent('setting')">settings</span>
 
+    @if (!logged()) {  
+    <span class="own-header-material-icons material-icons"
+      (click)="openDialogByContent('login')">account_circle</span>
+    }
+    @else {
+       <span class="own-header-material-icons material-icons"
+      (click)="logout()">logout</span>
+    }
   </div>
 </div>
